test/failed-2/secret/subtyping/variants/ill-typed/variants-2.stella
// ERROR_UNEXPECTED_VARIANT_LABEL
language core;
extend with
  #structural-subtyping,
  #variants;

fn main(x : <| a : <| b : Bool |> |>) -> <| a : <| |> |> {
  return x
}
